# medical-ai-agent

./: .dockerignore  .env.example  .env.pocket.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.simple  Makefile  README.md  docker-compose.yml  environment.yml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
agent/: executor.py  intent.py  pipeline.py  prompt_builder.py  retriever.py  sql_gen.py  sql_guard.py  warehouse_dev.py
api/: audit.py  chat.py  dev.py  health.py  index.py  semantic.py
audit/: logger.py
config/: application.example.yaml  application.local.yaml  application.pocket.yaml
data/: conversation_memory.db  medical_metadata.db
docs/: architecture.md  hermes_architecture_study.md  interview_summary.md  semantic-layer.md
evaluation/: benchmark_questions.yaml  eval_runner.py  expected_metrics.yaml  expected_tables.yaml  questions.jsonl
frontend/: index.html
indexer/: build_index.py  schema_parser.py
memory/: session_store.py
metadata/: column_catalog.yaml  diagnosis_dict.yaml  dq_rule_catalog.yaml  drug_dict.yaml  lineage_graph.yaml  metric_catalog.yaml  schema_catalog.yaml  schema_graph.yaml
schema/: ads_dq_result_summary.yaml  ads_drug_usage_trend.yaml  ads_expense_by_tumor_type.yaml  ads_inpatient_quality_board.yaml  ads_patient_mpi_summary.yaml  ads_tumor_report_monthly.yaml
scripts/: init_pocket_duckdb.py  run_pocket_demo.sh
skills/: anti_tumor_drug_usage.md  diagnosis_quality_check.md  drug_expense_analysis.md  dwd_table_design.md  lab_abnormal_analysis.md  patient_count_analysis.md  (+2 more)
(+125 files in other folders)
